<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="30dp"
    android:padding="@dimen/_12sdp"
    tools:context=".fragment.addTransaction">

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <androidx.cardview.widget.CardView
            android:id="@+id/cardincome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_weight="1">
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="5dp"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="50dp"
                    android:padding="@dimen/_2sdp"
                    android:layout_height="50dp"
                    android:src="@drawable/inomcei"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:textStyle="bold"
                    android:textSiz="@dimen/_10sdp"
                    android:gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardexpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="5dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/expensei"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expense"
                    android:textStyle="bold"
                    android:textSize="@dimen/_10sdp"
                    android:gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DETAILS"
            android:textStyle="bold"
            android:textSize="@dimen/_20sdp"
            android:letterSpacing="1"
            android:gravity="center"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/dollar"
                        android:padding="@dimen/_5sdp"
                        android:layout_margin="10dp"/>

                    <EditText
                        android:id="@+id/edtamount"
                        android:layout_width="321dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12dp"
                        android:hint="@string/enter_amount" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/menu"
                        android:padding="@dimen/_5sdp"
                        android:layout_margin="10dp"/>

                    <EditText
                        android:id="@+id/edtcategory"
                        android:layout_width="321dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12dp"
                        android:hint="@string/enter_category" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/notes"
                        android:padding="@dimen/_5sdp"
                        android:layout_margin="10dp"/>

                    <EditText
                        android:id="@+id/edtnote"
                        android:layout_width="298dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12dp"
                        android:hint="@string/enter_note" />
                </LinearLayout>



                <Button
                    android:id="@+id/btnsubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/black"
                    android:text="@string/submit"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/white"
                    android:layout_marginTop="25dp"

                    android:layout_marginBottom="10dp"/>



            </LinearLayout>




        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:gravity="bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/note_please_do_select_the_appropriate_option_from_income_and_expense_button_to_be_listed_accordingly"
            android:textStyle="italic"
            android:textSize="@dimen/_15sdp"
            android:layout_margin="12dp"
            android:layout_gravity="bottom"/>
    </LinearLayout>

</LinearLayout>
